Connect express to mongodb atlas database. In addition, build userModel, productModel, reviewModel, and orderModel.

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
 # NODE_ENV=production
 
+DATABASE_URI=mongodb+srv://Shakhlyn:mern123@project.nfuis9w.mongodb.net/agora?retryWrites=true&w=majority
+
 PORT=3000
