--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "author": "Shakhlyn",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
