feat: Implement pagination functionality

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ NODE_ENV=development
 DATABASE_URI=mongodb+srv://Shakhlyn:mern123@project.nfuis9w.mongodb.net/agora?retryWrites=true&w=majority
 
 JWT_SECRET=secret_text_to_make_jwt
+
+PRODUCT_PER_PAGE=3
