--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node src/server.js",
     "server": "nodemon src/server.js",
-    "client": "npm run dev --prefix frontend",
+    "client": "npm run dev --prefix ../frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node src/seeder",
     "data:destroy": "node src/seeder -d"
